<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoiceToText</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_draft">Drafts</string>
 	<string name="TextView">To</string>
 	<string name="newmessage">New Message</string>
 	<string name="start_button">Start</string>
 	<string name="send_button">Send</string>
 	<string name="main">mainbutton</string>
 	<string name="image">imagebutton</string>
 	<string name="hint"></string>
 	<string name="backup">Backup</string>
 	<string name="delete">Delete</string>
 	<string name="cancel"/>
 	<string name="title">Select</string>
 	<string name="login">Login to Twitter</string>
 	<string name="status">Update Status</string>
 	<string name="tweet">Tweet</string>
 	<string name="logout">Logout</string>
 	<string name="name">Email</string>
 	<string name="password">Password</string>
 	<string name="confirm">Confirm Password</string>
 	<string name="security_password">Password</string>
 	<string name="pin">Confirm Password</string>
 	<string name="set">Set Password</string>
 	<string name="remove">Remove Password</string>
 	<string name="message">New Message</string>
 	<string name="settings">Settings</string>
 	<string name="read">Inbox</string>
 	<string name="draft">Drafts</string>
 	<string name="contact">Contacts</string>
 	<string name="sec_settings">Security Settings</string>
 	<string name="sec_option">Security Options</string>
 	<string name="twitter">Twitter</string>
 	<string name="sec_password">Password</string>
 	<string name="inbox">Inbox</string>
 	<string name="complete">Contact Number</string>
 	<string name="create">Create Draft</string>
 	<string name="send">Send Draft</string>
</resources>
