<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/subview"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/hint"
        android:textColor="#FFF" 
        android:inputType="textEmailAddress">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="277dp"
        android:layout_height="0dip"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.16"
        android:text="@string/hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:columnCount="2" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="133dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:src="@mipmap/correct"
            android:contentDescription="@string/image"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="133dp"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:src="@mipmap/wrong"
            android:contentDescription="@string/image"/>
    </GridLayout>

</LinearLayout>