<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/subview"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/security_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        android:textColor="#FFF" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/pin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:columnCount="2" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="133dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:contentDescription="@string/image"
            android:src="@mipmap/correct" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="133dp"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:contentDescription="@string/image"
            android:src="@mipmap/wrong" />
    </GridLayout>

</LinearLayout>