<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/subview"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        android:src="@drawable/abc_ic_search_api_mtrl_alpha" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|bottom"
            android:layout_row="0"
            android:ems="10"
            android:text="@string/complete"
            android:textColor="#FFF" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:contentDescription="@string/image"
            android:src="@drawable/abc_ic_voice_search_api_mtrl_alpha" />

    </GridLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.53"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint"
        android:textColor="#FFF" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:columnCount="2" >

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="133dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/abc_ic_go_search_api_mtrl_alpha" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="133dp"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:src="@mipmap/wrong"
            android:contentDescription="@string/image"/>
    </GridLayout>

</LinearLayout>